--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-    "name": "Auto-Refresh",
+    "name": "TabStatus",
     "version": "0.0.1",
     "dependencies": {
         "jquery": "latest",
