heruko faltu, sob kisu'te taka lage. converted it to appfog

--- a/Server/package.json
+++ b/Server/package.json
@@ -6,7 +6,7 @@
         "email": "pallab.gain@gmail.com"
     },
     "scripts": {
-        "start": "nodemon server.js"
+        "start": "node server.js"
     },
     "dependencies": {
         "jquery": "*",
