--- a/bower.json
+++ b/bower.json
@@ -7,6 +7,7 @@
         "bootstrap": "latest",
         "underscore": "latest",
         "highcharts": "latest",
-        "momentjs": "latest"
+        "momentjs": "latest",
+        "bootstrap-daterangepicker": "latest"
     }
 }
